syntax = "proto3";

package ON.Fragments.Content;

import "google/protobuf/timestamp.proto";

service VideoInterface {
	rpc LinkVideo (LinkVideoRequest) returns (LinkVideoResponse);
	rpc GetVideoLink (GetLinkRequest) returns (GetLinkResponse);
	rpc GetAllVideoLinks (GetAllLinkRequest) returns (GetAllLinkResponse);
	rpc UnlinkVideo (UnlinkVideoRequest) returns (UnlinkVideoResponse);
}

enum HOST_PLATFORM {
		RUMBLE = 0;
		YOUTUBE = 1;
}

message LinkVideoRequest {
	HOST_PLATFORM HostPlatform = 1;
	string PlatformVideoID = 2;
}

message LinkVideoResponse {
	bool Success = 1;
	repeated string Errors = 2;
	VideoLink Linkedvideo = 3;
}

message VideoLink {
	

	string LinkGUID = 1;
	HOST_PLATFORM HostPlatform = 2;
	string PlatformVideoID = 3;
	string VideoUrl = 4;
	string Embed = 5;
	google.protobuf.Timestamp CreatedOnUTC = 6;
	google.protobuf.Timestamp ModifiedOnUTC = 7;
}

message GetLinkRequest {}

message GetLinkResponse {}

message GetAllLinkRequest {}

message GetAllLinkResponse {}

message UnlinkVideoRequest {
	string LinkGUID = 1;
}

message UnlinkVideoResponse {
	bool Success = 1;
	repeated string Errors = 2;
}